Fix bug of wrong positioning

--- a/src/components/page-layout/styles.css
+++ b/src/components/page-layout/styles.css
@@ -1,5 +1,6 @@
 .page-layout.MuiContainer-root {
   width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
